--- a/shweb/static/css/release.css
+++ b/shweb/static/css/release.css
@@ -103,10 +103,10 @@ pre {
     background-color: rgba(124, 124, 124, 0.856);
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.534);
     z-index: 1;
-    align-items: center;
 }
 
 .share-link {
+    display: flex;
     cursor: pointer;
     padding: 0 5px;
 }
@@ -125,8 +125,10 @@ pre {
     text-decoration: none;
 }
 
+
 .share:hover .share-dropdown {
     display: flex;
+    align-items: center;
 }
 
 .content ul {
