--- a/shweb/templates/base.html
+++ b/shweb/templates/base.html
@@ -12,9 +12,9 @@
     <meta name="title" content="станет хуже">
     <meta property="og:title" content="станет хуже">
     <meta name="twitter:title" content="станет хуже">
-    <meta name="description" content="Post-metal from Saint Petersburg">
-    <meta property="og:description" content="Post-metal from Saint Petersburg">
-    <meta name="twitter:description" content="Post-metal from Saint Petersburg">
+    <meta name="description" content="{{_('description')}}">
+    <meta property="og:description" content="{{_('description')}}">
+    <meta name="twitter:description" content="{{_('description')}}">
     <meta name="image" content="http://www.stanethuzhe.ru/static/images/og-home.jpg">
     <meta property="og:image" content="http://www.stanethuzhe.ru/static/images/og-home.jpg">
     <meta name="twitter:image" content="http://www.stanethuzhe.ru/static/images/og-home.jpg">
@@ -34,13 +34,13 @@
             {% endblock %}
             <div class="navbar">
                 <a href="/{{session['lang_arg']}}" class="nav-link">{{_('home')}}</a>
-                <a href="/feed{{session['lang_arg']}}" class="nav-link">feed</a>
+                <a href="/feed{{session['lang_arg']}}" class="nav-link">{{_('feed')}}</a>
                 <div class="dropdown">
-                    <button class="dropbtn">discogs</button>
+                    <button class="dropbtn">{{_('discogs')}}</button>
                     <div class="dropdown-content">
-                        <a href="/releases/unsleep{{session['lang_arg']}}">single "бессонница"</a>
-                        <a href="/releases/traces{{session['lang_arg']}}">single "тропы"</a>
-                        <a href="/releases/march{{session['lang_arg']}}">single "марш пустых знамён"</a>
+                        <a href="/releases/march{{session['lang_arg']}}">{{_('single')}} "марш пустых знамён"</a>
+                        <a href="/releases/unsleep{{session['lang_arg']}}">{{_('single')}} "бессонница"</a>
+                        <a href="/releases/traces{{session['lang_arg']}}">{{_('single')}} "тропы"</a>
                     </div>
                 </div>
             </div>
@@ -52,43 +52,43 @@
         <ul class="social-links">
             <li class="social">
                 <a target="_blank" href="https://vk.com/stanethuzhe">
-                    <img src="/static/images/vk.svg" alt="" class="filter-pink">
+                    <img src="/static/images/vk.svg" alt="" class="filter-pink" title="VK">
                 </a>
             </li>
             <li class="social">
                 <a target="_blank" href="https://stanethuzhe.bandcamp.com/">
-                    <img src="/static/images/bandcamp.svg" alt="" class="filter-pink">
+                    <img src="/static/images/bandcamp.svg" alt="" class="filter-pink" title="Bandcamp">
                 </a>
             </li>
             <li class="social">
                 <a target="_blank" href="https://www.instagram.com/stanethuzhe/">
-                    <img src="/static/images/instagram.svg" alt="" class="filter-pink">
+                    <img src="/static/images/instagram.svg" alt="" class="filter-pink" title="Instagram">
                 </a>
             </li>
             <li class="social">
                 <a target="_blank" href="https://www.youtube.com/channel/UCiFPrPKAUg391EqICZy8dxw">
-                    <img src="/static/images/youtube.svg" alt="" class="filter-pink">
+                    <img src="/static/images/youtube.svg" alt="" class="filter-pink" title="Youtube">
                 </a>
             </li>
             <li class="social">
                 <a target="_blank" href="https://www.facebook.com/stanethuzhe">
-                    <img src="/static/images/facebook.svg" alt="" class="filter-pink">
+                    <img src="/static/images/facebook.svg" alt="" class="filter-pink" title="Facebook">
                 </a>
             </li>
             <li class="social">
                 <a target="_blank"
                     href="https://music.apple.com/ru/artist/%D1%81%D1%82%D0%B0%D0%BD%D0%B5%D1%82-%D1%85%D1%83%D0%B6%D0%B5/1489799830">
-                    <img src="/static/images/apple.svg" alt="" class="filter-pink">
+                    <img src="/static/images/apple.svg" alt="" class="filter-pink" title="Apple">
                 </a>
             </li>
             <li class="social">
                 <a target="_blank" href="https://open.spotify.com/artist/6ICMu3DruvV9h4UbB6Kovn">
-                    <img src="/static/images/spotify.svg" alt="" class="filter-pink">
+                    <img src="/static/images/spotify.svg" alt="" class="filter-pink" title="Spotify">
                 </a>
             </li>
             <li class="social">
                 <a target="_blank" href="https://music.yandex.ru/artist/8451417">
-                    <img src="/static/images/yandex.svg" alt="" class="filter-pink">
+                    <img src="/static/images/yandex.svg" alt="" class="filter-pink" title="Yandex.Music">
                 </a>
             </li>
         </ul>
