--- a/shweb/templates/release.html
+++ b/shweb/templates/release.html
@@ -36,7 +36,7 @@
                         <img src="/static/images/services/{{ service.name }}.png">
                     </a>
                     <a href="{{ service.link }}" class="service-link" target="_blank">
-                        <button class="service-btn">Play</button>
+                        <button class="service-btn">{{_('Play')}}</button>
                     </a>
                 </div>
             </li>
@@ -57,7 +57,7 @@
     <div class="release-head">
         <div class="release-name"> {{release_data['release-name']}}&nbsp;<span class="share">
                 <button class="share-btn">
-                    <div class="share-text">share </div>
+                    <div class="share-text">{{_('share')}} </div>
                     <img class="share-icon" src="/static/images/icons/share.png">
                 </button>
                 <div class="share-dropdown">
@@ -87,8 +87,8 @@
             </span>
         </div>
     </div>
-    <div class="date">Release date: {{release_data['date']}} </div>
-    <div class="tracklist-head">Tracklist:</div>
+    <div class="date">{{_('Release date')}}: {{release_data['date']}} </div>
+    <div class="tracklist-head">{{_('Tracklist')}}:</div>
     <ul class="tracklist">
         {% for track in tracklist%}
         <div class="lyrics-dropdown">
@@ -97,7 +97,6 @@
                         src="/static/images/icons/expand.svg" id="{{ track.id }}-expand-icon"> </span>
             </button>
             <div id={{ track.id }} class="lyrics">
-                <pre><b>Lyrics:</b> {{track.written}}</pre>
                 <pre>{{track.lyrics}}</pre>
             </div>
         </div>
